--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "neihhien/neihhien.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Thanh Hien"
   pronouns         : "she/her" # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Curious by nature, always eager to learn and explore new ideas."
   location         : "France"
   employer         : "Earth"
   uri              : # URL
